@@ -2268,10 +2268,17 @@ static bool check_connect(DESC *d, char *msg)
             //
             DESC_ITER_PLAYER(player, d2)
             {
-                if (d2->program_data != NULL)
+                if (  NULL != d2->program_data
+                   && NULL == d->program_data)
                 {
                     d->program_data = d2->program_data;
-                    break;
+                }
+                else if (NULL != d2->program_data)
+                {
+                    // Enforce that all program_data pointers for this player
+                    // are the same.
+                    // 
+                    mux_assert(d->program_data == d2->program_data);
                 }
             }
 
@@ -2306,7 +2313,7 @@ static bool check_connect(DESC *d, char *msg)
 
             // If stuck in an @prog, show the prompt.
             //
-            if (d->program_data != NULL)
+            if (NULL != d->program_data)
             {
                 queue_write_LEN(d, ">\377\371", 3);
             }
@@ -2446,6 +2453,7 @@ static void do_logged_out_internal(DESC *d, int key, char *arg)
             queue_string(d, "This command is disabled on login.");
             queue_write_LEN(d, "\r\n", 2);
         }
+        else
 #endif // FIRANMUX
         {
             dump_users(d, arg, key);
